--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content>
     <link href="https://at.alicdn.com/t/font_1982723_3ves5qdacbf.css" rel="stylesheet">
     <!-- Template CSS -->
-    <link rel="stylesheet" href="//dg.gua.ee/css/style-starter.css">
-    <link rel="stylesheet" href="//dg.gua.ee/css/rocket.css">
+    <link rel="stylesheet" href="css/style-starter.css">
+    <link rel="stylesheet" href="css/rocket.css">
     <script>
 setTimeout( function(){$("#hitokoto").fadeOut(1000);}, 5000 );
   function goo(){
@@ -376,15 +376,15 @@ setTimeout( function(){$("#hitokoto").fadeOut(1000);}, 5000 );
 <!-- //footer -->
 
 <!--  javascripts file here -->
-<script src="//dg.gua.ee/js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery-3.3.1.min.js"></script>
 
-<script src="//dg.gua.ee/js/theme-change.js"></script> <!-- //light and dark mode switch js -->
+<script src="js/theme-change.js"></script> <!-- //light and dark mode switch js -->
 
-<script src="//dg.gua.ee/js/circles.js"></script>
+<script src="js/circles.js"></script>
 
 <!-- stats number counter-->
-<script src="//dg.gua.ee/js/jquery.waypoints.min.js"></script>
-<script src="//dg.gua.ee/js/jquery.countup.js"></script>
+<script src="js/jquery.waypoints.min.js"></script>
+<script src="js/jquery.countup.js"></script>
 <script>
     $('.counter').countUp();
 </script>
@@ -487,7 +487,7 @@ setTimeout( function(){$("#hitokoto").fadeOut(1000);}, 5000 );
 </script>
 <!--//MENU-JS-->
 
-<script src="//dg.gua.ee/js/bootstrap.min.js"></script><!-- //bootstrap js -->
+<script src="js/bootstrap.min.js"></script><!-- //bootstrap js -->
 </body>
 
 </html>
